--- a/index.html
+++ b/index.html
@@ -207,46 +207,10 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   .score-section{margin-top:40px;}
 
   .group-row{padding:2px 0; margin-bottom:0;}
-
-/* Front page styles */
-#frontpage {
-  display: none;
-  text-align: center;
-  padding-top: 15%;
-}
-#frontpage img {
-  max-width: 200px;
-  margin-bottom: 20px;
-}
-#frontpage h1 {
-  font-size: 24pt;
-  font-weight: 700;
-  color: #444;
-}
 </style>
-<script id="embeddedQuestions" type="application/json">[]
-// Patch: include frontpage as page 0
-(function(){
-  var oldShowPage = showPage;
-  showPage = function(n){
-    if(n===0){
-      document.querySelectorAll('section').forEach(s=>s.style.display='none');
-      document.getElementById('frontpage').style.display='block';
-      return;
-    }
-    oldShowPage(n);
-  };
-})();
-</script>
+<script id="embeddedQuestions" type="application/json">[]</script>
 </head>
 <body>
-
-<section id="frontpage">
-  <img src="A_logo_image_features_a_circular_emblem_with_the_c.png" alt="BED Logo">
-  <h1>Self-Assessment Form</h1>
-  <button onclick="showPage(1)">Start</button>
-</section>
-
 <main class="container">
 <h1>BED HOSPITALITY 2.0</h1>
 <p class="subheader">TEAM MEMBER FORM</p>
@@ -662,20 +626,23 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
 </script>
 
 <script>
-// === Non-destructive validation patch (Next/Submit gating) ===
+// === Validation patch v2 (uses window.__S) ===
 (function(){
-  // Helper: check completion of Q1 and Q2 based on S.answers
-  function qIdsFor(range){ 
-    if(!window.S || !Array.isArray(S.questions)) return [];
-    return S.questions.slice(range[0], range[1]).map(q => q.id);
+  function Sref(){ return (window.__S || window.S || {}); }
+  function qIdsFor(range){
+    var S = Sref();
+    if(!Array.isArray(S.questions)) return [];
+    return S.questions.slice(range[0], range[1]).map(function(q){ return q.id; });
   }
   function allAnswered(ids){
-    return ids.length>0 && ids.every(id => S.answers && S.answers[id] != null);
+    var S = Sref();
+    if(!ids.length) return false;
+    return ids.every(function(id){ return S.answers && S.answers[id] != null; });
   }
   function isQ1Complete(){ return allAnswered(qIdsFor([0,18])); }
   function isQ2Complete(){ return allAnswered(qIdsFor([18,35])); }
 
-  // Re-validate buttons when user selects a score
+  // Hook pill clicks to re-evaluate states
   document.addEventListener('click', function(ev){
     var t = ev.target;
     if(t && t.classList && t.classList.contains('pill')){
@@ -686,29 +653,28 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
     }
   }, true);
 
-  // After building Q1 or Q2, initialize the disabled state
-  var _toQ1 = document.getElementById('toQ1');
-  if(_toQ1){
-    var old = _toQ1.onclick;
-    _toQ1.onclick = function(){
-      if(typeof old === 'function') old();
+  // After entering Q1/Q2, sync button states
+  var toQ1 = document.getElementById('toQ1');
+  if(toQ1){
+    var prevToQ1 = toQ1.onclick;
+    toQ1.onclick = function(){
+      if(typeof prevToQ1 === 'function') prevToQ1();
       var b1 = document.getElementById('toQ2');
       if(b1) b1.disabled = !isQ1Complete();
     };
   }
 
-  var _toQ2 = document.getElementById('toQ2');
-  if(_toQ2){
-    var old2 = _toQ2.onclick;
-    // Wrap only once; if old2 exists, we keep it and post-run set disabled state for submit button
-    document.getElementById('toQ2').onclick = function(){
-      if(typeof old2 === 'function') old2();
+  var toQ2 = document.getElementById('toQ2');
+  if(toQ2){
+    var prevToQ2 = toQ2.onclick;
+    toQ2.onclick = function(){
+      if(typeof prevToQ2 === 'function') prevToQ2();
       var sub = document.getElementById('submitAll');
       if(sub) sub.disabled = !isQ2Complete();
     };
   }
 
-  // Also guard direct clicks (just in case): prevent navigation if not complete
+  // Hard guard against advancing when incomplete
   document.addEventListener('click', function(ev){
     var id = ev.target && ev.target.id;
     if(id === 'toQ2' && !isQ1Complete()){ ev.preventDefault(); ev.stopPropagation(); }
